# hypermodern-pypras

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
docs/: conf.py  index.rst  reference.rst
src/hypermodern_pypras/: __init__.py  console.py  wikipedia.py
tests/: test_console.py  test_wikipedia.py
