[tool.poetry]
name = "hypermodern-pypras"
version = "0.1.0"
description = "The hypermodern Python Pras' project"
authors = ["Prasetiyo Hadi Purwoko <pras@deuterion.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.com/prasetiyohadi/hypermodern-pypras"
repository = "https://gitlab.com/prasetiyohadi/hypermodern-pypras"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.9.0"

[tool.poetry.scripts]
hypermodern-pypras = "hypermodern_pypras.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
